--- a/app/globals.css
+++ b/app/globals.css
@@ -11,10 +11,12 @@ h4,
 h5,
 h6 {
   font-family: 'Antonio', sans-serif;
+  font-weight: bolder;
 }
 
 p {
   font-family: 'Acumin Variable Concept', sans-serif;
+  font-weight: normal;
 }
 
 /* body {
@@ -34,28 +36,46 @@ p {
   height: 80px; /* Adjust this value as needed to account for your fixed header's height */
   margin: -80px 0 0; /* Negative margin to counteract the header's height */
 }
-.swiper {
+.full-screen-slider {
   width: 100%;
-  height: 500px;
+  height: 100vh; /* 100% of the viewport height */
+  background-color: black;
 }
 
-.swiper-slide {
-  background-position: center;
+.mySwiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide-content {
   background-size: cover;
-  background-color: #1e1e1e;
+  background-position: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 100%;
 }
-/*  */
 
-.swiper-slide img {
-  display: block;
+.image-container {
+  position: relative;
+}
+
+.tooltip {
+  position: absolute;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 16px;
+  border-radius: 5px;
+  display: none;
+  opacity: 0;
+  transition: opacity 0.3s;
+  bottom: 0;
+  left: 0; /* Set left to 0 to cover the full width of the parent container */
   width: 100%;
 }
 
-@media (max-width: 768px) {
-  .swiper-slide img {
-    display: block;
-    width: 500px;
-    height: 450px;
-    object-fit: cover;
-  }
+.image-container:hover .tooltip {
+  display: block;
+  opacity: 1;
 }
